--- a/src/components/Canvas/Canvas.module.scss
+++ b/src/components/Canvas/Canvas.module.scss
@@ -7,7 +7,7 @@
   align-items: center;
   width: 100%;
   height: 100%;
-  padding: $spacing-lg;
+  padding: 0; // Remove padding to maximize space
 }
 
 .canvas {
@@ -16,6 +16,8 @@
   border: 1px solid $border-primary;
   box-shadow: $shadow-sm;
   transition: all $transition-base;
+  max-width: 100%;
+  max-height: 100%;
   
   &:hover {
     box-shadow: $shadow-md;
